<resources>
    <string name="app_name">BookInside</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="register_fragment_label">Register Fragment</string>
    <string name="forget_pass_fragment">Forget Pass Fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="server_ip">http://192.168.1.4:3000</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="register_here_button">Register here.</string>
    <string name="forget_pass_button">Forget Password</string>
    <string name="login_button">Log in</string>
    <string name="password_input">Password</string>
    <string name="username_input">Username</string>
    <string name="logo_app">logo</string>
    <string name="register_button">Register</string>
    <string name="register_email">Your email</string>
    <string name="register_phone">Phone</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_pass">Re-type password</string>
    <string name="have_account">Already with us ?</string>
    <string name="have_account_button">Log in</string>
    <string name="toggle_show_password">SHOW</string>

    <string name="iv_lock_pass">lock</string>
    <string name="tv_forget_pass">Forgot Password?</string>
    <string name="tv_subheader_forget_pass">"Confirm your Registered Email and we'll send the instructions."</string>
    <string name="et_email_forget_pass">"Enter your email"</string>
    <string name="reset_pass_button">"Reset Password"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out"><i>Log out</i></string>
    <string name="read_books">Read Books</string>
    <string name="reading">Reading</string>
    <string name="wishlist">Wishlist</string>
    <string name="find_books">Find Books</string>
    <string name="username">*username</string>
    <string name="back_arrow">back_arrow</string>
    <string name="back_from_view_books">back_from_view_books</string>
    <string name="back_from_find_books">back_from_find_books</string>
    <string name="book_1">Book 1</string>
    <string name="add_book">add_book</string>
    <string name="book_title">Book Title</string>
    <string name="author_name">Author Name</string>
    <string name="cancel_button">cancel_button</string>
    <string name="add_button">add_button</string>
    <string name="title">*title</string>
    <string name="bookAuthor">Author</string>
    <string name="bookTitle">Title</string>
    <string name="bookDescription">O scurta si ingenioasa descriere a cartii pe care o vom lua din baza de date, sper hhhhhhhhhhhhhhhhhhhhhhgggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggghhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</string>

    <string-array name="icons">
        <item>@drawable/star</item>
        <item>@drawable/patratel</item>
        <item>@drawable/go</item>
    </string-array>

    <string name="main_no_items">No books to display</string>
    <string name="back_from_book_page" />
    <string name="user_username">Username</string>
    <string name="user_email">name.surname@mail.mail</string>
    <string name="back_from_user_page" />

</resources>
