<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_gradient"

    android:textAlignment="center"
    tools:context=".ForgetPasswordActivity">

    <ImageView
        android:id="@+id/iv_lock_pass"
        android:layout_width="212dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/iv_lock_pass"
        android:src="@drawable/lockpass" />

    <TextView
        android:id="@+id/tv_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_lock_pass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/tv_forget_pass"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_subheader_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_forget_pass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/tv_subheader_forget_pass"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_email_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_below="@+id/tv_subheader_forget_pass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:cursorVisible="true"
        android:drawableStart="@drawable/ic_action_email_forget_pass"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/et_email_forget_pass"
        android:autofillHints="email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_reset_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/et_email_forget_pass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"
        app:cardBackgroundColor="#C1FFFFFF"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_reset_password_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/reset_pass_button"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>