<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2f1847"

    android:textAlignment="center"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="212dp"
        android:layout_height="173dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/logo_app"
        android:src="@drawable/logoapp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/iv_logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:autofillHints="username"
        android:cursorVisible="true"
        android:drawableStart="@drawable/ic_action_username"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/username_input"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="18sp"
        app:backgroundTint="@color/white"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/et_username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="60dp"
        android:autofillHints="password"
        android:hint=""
        android:textColorHint="@color/silver"
        app:hintTextColor="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:drawableStart="@drawable/ic_action_pass"
            android:ems="10"
            android:fontFamily="sans-serif-thin"
            android:hint="@string/password_input"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/silver"
            android:textCursorDrawable="@drawable/cursor_color"
            app:backgroundTint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/et_password_wrapper"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="75dp"

        app:cardBackgroundColor="#C1FFFFFF"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/login_button"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_forget_pass_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_login"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_action_forget_pass"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/forget_pass_button"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_register_here"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_forget_pass_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="75dp"

        app:cardBackgroundColor="#66010613"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#07000000">

            <TextView
                android:id="@+id/tv_register_here_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="#07000000"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/register_here_button"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>