<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_gradient"

    android:textAlignment="center"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/register_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
       />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_register"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:cursorVisible="true"
        android:drawableStart="@drawable/ic_action_email"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/register_email"
        android:autofillHints="email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/et_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:cursorVisible="true"
        android:drawableStart="@drawable/ic_action_phone"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/register_phone"
        android:autofillHints="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        android:inputType="phone"
        />

    <EditText
        android:id="@+id/et_username_register"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/et_phone"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:cursorVisible="true"
        android:drawableStart="@drawable/ic_action_face"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/register_username"
        android:autofillHints="username"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="18sp"
        app:backgroundTint="@color/white"

        />

    <EditText
        android:id="@+id/et_password_register"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/et_username_register"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="58dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        android:textCursorDrawable="@drawable/cursor_color"
        app:backgroundTint="@color/white" />

<!--    <TextView-->
<!--            android:id="@+id/tv_toggle_show_pass"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="300dp"-->
<!--            android:layout_marginTop="-37dp"-->
<!--            android:layout_below="@+id/et_password_register"-->
<!--            android:background="#07000000"-->
<!--            android:fontFamily="sans-serif-light"-->
<!--            android:text="@string/toggle_show_password"-->
<!--            android:textColor="#FFFFFF"-->
<!--            android:textSize="12sp"/>-->

    <EditText
        android:id="@+id/et_confirm_pass_register"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/et_password_register"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/register_confirm_pass"
        android:autofillHints="confirm password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/silver"
        android:textCursorDrawable="@drawable/cursor_color"
        app:backgroundTint="@color/white"
        />

<!--    <TextView-->
<!--        android:id="@+id/tv_toggle_show_confirm_pass"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="300dp"-->
<!--        android:layout_marginTop="-37dp"-->
<!--        android:layout_below="@+id/et_confirm_pass_register"-->
<!--        android:background="#07000000"-->
<!--        android:fontFamily="sans-serif-light"-->
<!--        android:text="@string/toggle_show_password"-->
<!--        android:textColor="#FFFFFF"-->
<!--        android:textSize="12sp"/>-->

    <androidx.cardview.widget.CardView
        android:id="@+id/card_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/et_confirm_pass_register"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="75dp"
        app:cardBackgroundColor="#C1FFFFFF"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/register_button"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_register"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif"
        android:layout_marginTop="45dp"
        android:text="@string/have_account"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_have_account"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_have_account"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="75dp"

        app:cardBackgroundColor="#66010613"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:background="#07000000"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_have_account_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="#07000000"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/have_account_button"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>