<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_gradient"
    android:textAlignment="center"
    tools:context=".BookActivity">

    <ImageView
        android:id="@+id/back_from_book_page"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:clickable="true"
        android:contentDescription="@string/back_from_book_page"
        android:focusable="true"
        android:src="@drawable/arrow" />

    <ImageView
        android:id="@+id/book_cover_image"
        android:layout_width="wrap_content"
        android:layout_height="231dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="493dp"
        android:src="@drawable/ion" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="490dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="241dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/locations_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_description"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_title"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/bookAuthor"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/book_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_author"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/bookDescription"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <!--            <ListView-->
            <!--                android:id="@+id/locations_list"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_below="@+id/book_description"-->
            <!--                android:layout_marginTop="10dp"-->
            <!--                android:padding="10dp"-->
            <!--                android:textAlignment="center"-->
            <!--                android:textColor="@color/white"-->
            <!--                android:textSize="24sp" />-->

            <TextView
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/bookTitle"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>

